--- a/README
+++ b/README
@@ -1,27 +1,10 @@
- __   __  _______  __    _  _______          
-|  |_|  ||       ||  |  | ||       |         
-|       ||   _   ||   |_| ||   _   |         
-|       ||  | |  ||       ||  | |  |         
-|       ||  |_|  ||  _    ||  |_|  |         
-| ||_|| ||       || | |   ||       |         
-|_|   |_||_______||_|  |__||_______|         
- _______  _______  _______  _______  _______ 
-|       ||   _   ||       ||       ||   _   |
-|    _  ||  |_|  ||  _____||_     _||  |_|  |
-|   |_| ||       || |_____   |   |  |       |
-|    ___||       ||_____  |  |   |  |       |
-|   |    |   _   | _____| |  |   |  |   _   |
-|___|    |__| |__||_______|  |___|  |__| |__|
- __   __  ___                                
-|  | |  ||   |                               
-|  | |  ||   |                               
-|  |_|  ||   |                               
-|       ||   |                               
-|       ||   |                               
-|_______||___|  
-
-
-                  ———  A weird and cool UI for a website (and for MY upcoming website). ———
+ __   __  _______  __    _  _______          _______  _______  _______  _______  _______              __   __  ___  
+|  |_|  ||       ||  |  | ||       |        |       ||   _   ||       ||       ||   _   |            |  | |  ||   | 
+|       ||   _   ||   |_| ||   _   |        |    _  ||  |_|  ||  _____||_     _||  |_|  |            |  | |  ||   | 
+|       ||  | |  ||       ||  | |  |        |   |_| ||       || |_____   |   |  |       |            |  |_|  ||   | 
+|       ||  |_|  ||  _    ||  |_|  |        |    ___||       ||_____  |  |   |  |       |            |       ||   | 
+| ||_|| ||       || | |   ||       |        |   |    |   _   | _____| |  |   |  |   _   |            |       ||   | 
+|_|   |_||_______||_|  |__||_______|        |___|    |__| |__||_______|  |___|  |__| |__|            |_______||___|                   ———  A weird and cool UI for a website (and for MY upcoming website). ———
 
 Welcome, I guess. You're here, so...
 
