--- a/README
+++ b/README
@@ -4,7 +4,11 @@
 |       ||  | |  ||       ||  | |  |        |   |_| ||       || |_____   |   |  |       |            |  |_|  ||   | 
 |       ||  |_|  ||  _    ||  |_|  |        |    ___||       ||_____  |  |   |  |       |            |       ||   | 
 | ||_|| ||       || | |   ||       |        |   |    |   _   | _____| |  |   |  |   _   |            |       ||   | 
-|_|   |_||_______||_|  |__||_______|        |___|    |__| |__||_______|  |___|  |__| |__|            |_______||___|                   ———  A weird and cool UI for a website (and for MY upcoming website). ———
+|_|   |_||_______||_|  |__||_______|        |___|    |__| |__||_______|  |___|  |__| |__|            |_______||___|     
+
+
+
+                         ———  A weird and cool UI for a website (and for MY upcoming website). ———
 
 Welcome, I guess. You're here, so...
 
